# relational-databases

./: CONTRIBUTING.MD  README.md  tags
01-data-analysis/: README.md  counties.sql  query01-result.tsv  query01-solution.sql  query01.sql  query02-result.tsv  query02-solution.sql  query02.sql  query03-result.tsv  query03-solution.sql  query03.sql  query04-result.tsv  query04-solution.sql  query04.sql  query05-result.tsv  query05-solution.sql  query05.sql  query06-result.tsv  query06-solution.sql  query06.sql  query07-result.tsv  query07-solution.sql  query07.sql  query08-result.tsv  query08-solution.sql  query08.sql  query09-result.tsv  query09-results.tsv  query09-solution.sql  query09.sql  query10-result.tsv  query10-solution.sql  query10.sql  query11-results.tsv  query11-solution.sql  query11.sql  query12-results.tsv  query12-solution.sql  query12.sql  query13.sql  (+3 more)
02-data-modelling/: README.md  build_test_database.sql
03-backend-engineering/: README.md
conceptual-design/: README.md
conceptual-design/cpp/: CMakeLists.txt  README.md
conceptual-design/cpp/include/catch2/: catch.hpp
conceptual-design/cpp/include/db-gen/common/: erd-types.hpp  sql-table-types.hpp
conceptual-design/cpp/include/db-gen/converter/: erd-converter.hpp
conceptual-design/cpp/src/: CMakeLists.txt  main.cpp
conceptual-design/cpp/src/converter/: CMakeLists.txt  erd-converter.cpp
conceptual-design/cpp/test/: CMakeLists.txt
conceptual-design/cpp/test/converter/: sample-tests.cpp
logical-design/: README.md  test-cases.json
physical-design/: README.md
query-opt/: README.md
(+112 files in other folders)
